[tool.poetry]
name = "envpool-cleanrl"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
envpool = "^0.6.1"
stable-baselines3 = "1.2.0"
gym = {version = "0.23.1", extras = ["classic_control"]}
free-mujoco-py = "^2.1.6"
ale-py = "0.7.4"
AutoROM = {version = "^0.4.2", extras = ["accept-rom-license"]}
tensorboard = "2.8.0"
torch = "^1.11.0"
protobuf = "<=4"
opencv-python = "^4.5.5"
wandb = "^0.12.17"
tueplots = {version = "^0.0.4", optional = true}
expt = {git = "https://github.com/wookayin/expt.git", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
plotting = ["tueplots", "expt"]
